--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>
       header
     </h1>
+    <img src="https://avatars.githubusercontent.com/u/79889335?v=4">
     Hello there, awesome person!
   </body>
 </html>
