--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     </title>
   </head>
   <body>
+    <ol>
+      <li>list1</li>
+      <li>list2</li>
+      <li>list3</li>
+    </ol>
     <h1>
       header
     </h1>
